--- a/app/components/about/about.component.html
+++ b/app/components/about/about.component.html
@@ -1,1 +1,3 @@
-ABOUT
+<h1>About Application</h1>
+<h3>Version: 1.0</h3>
+<p>This is an Angular 2 Application. It uses Spotify web Api to get all artist info.</p>
